--- a/app/views/my.html
+++ b/app/views/my.html
@@ -1,3 +1,3 @@
-<input type="text" ng-model="name"/>
+<input type="text" ng-model="product.name"/>
 <button ng-click="setName()">submit</button>
 <div ng-include="'views/mySousFirstController.html'"></div>
