--- a/app/views/mySousFirstController.html
+++ b/app/views/mySousFirstController.html
@@ -4,6 +4,6 @@
 </div>
 
 <div ng-controller="MySousSecondCtrl">
-	<input type="text" ng-model="product.name"/>
+	{{product.name}}
 	<button ng-click="setName()">submit</button>
 </div>
